fix: overflowing course name in to-do list

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
 div#wrapper {
   max-width: 100%;
 }
+
+div.ToDoSidebarItem__Info > span {
+  word-break: break-all;
+}
